force-app/main/default/objects/Reserva_de_Sala__c/Reserva_de_Sala__c.object-meta.xml
<CustomObject>
    <label>Reserva</label>
    <nameField>
        <displayFormat>RES - {0000}</displayFormat>
        <label>Reserva</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Reservas</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>