force-app/main/default/objects/Reserva_de_Sala__c/fields/Evento__c.field-meta.xml
<CustomField>
    <fullName>Evento__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Evento</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>Reservas de sala</relationshipLabel>
    <relationshipName>Reservas</relationshipName>
    <type>Lookup</type>
</CustomField>