force-app/main/default/objects/Reserva_de_Sala__c/fields/Frequencia__c.field-meta.xml
<CustomField>
    <fullName>Frequencia__c</fullName>
    <inlineHelpText>Quantas vezes essa reserva se repetirá?</inlineHelpText>
    <label>Frequência</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>