force-app/main/default/objects/Reserva_de_Sala__c/fields/In_cio__c.field-meta.xml
<CustomField>
    <fullName>In_cio__c</fullName>
    <label>Início</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>