force-app/main/default/objects/Reserva_de_Sala__c/fields/Linha_de_Evento__c.field-meta.xml
<CustomField>
    <fullName>Linha_de_Evento__c</fullName>
    <label>Linha de Evento</label>
    <length>255</length>
    <type>Text</type>
</CustomField>