force-app/main/default/objects/Reserva_de_Sala__c/fields/Observacoes__c.field-meta.xml
<CustomField>
    <fullName>Observacoes__c</fullName>
    <label>Observações</label>
    <type>TextArea</type>
</CustomField>