force-app/main/default/objects/Reserva_de_Sala__c/fields/recorrencia__c.field-meta.xml
<CustomField>
    <fullName>recorrencia__c</fullName>
    <formula>if(Text(Reserva_recorrente__c) == &apos;Semanal&apos;, 7,
if(Text(Reserva_recorrente__c) == &apos;Quinzenal&apos;, 14, 
if(Text(Reserva_recorrente__c) == &apos;Quinzenal&apos;, 28, null)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Qual o tipo de recorrencia dessa reserva?</inlineHelpText>
    <label>Recorrencia</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>