force-app/main/default/objects/Reserva_de_Sala__c/fields/Reserva__c.field-meta.xml
<CustomField>
    <fullName>Reserva__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Reserva</label>
    <referenceTo>Reserva_de_Sala__c</referenceTo>
    <relationshipLabel>Reservas</relationshipLabel>
    <relationshipName>Reservas</relationshipName>
    <type>Lookup</type>
</CustomField>