force-app/main/default/objects/Reserva_de_Sala__c/fields/Reserva_recorrente__c.field-meta.xml
<CustomField>
    <fullName>Reserva_recorrente__c</fullName>
    <defaultValue>&apos;Não Recorrente&apos;</defaultValue>
    <inlineHelpText>Exemplo: Suponha que façamos uma reserva da sala de reunião da sede da rua 89, do dia 04/03/2024 - 13:30 às 14:30 e essa reserva seja recorrente no &quot;Mês atual&quot;. Logo, todas as segundas-feiras do mês de Março no horario 13:30 às 14:30, serão reservados. Mas isso não se aplicará para o mês seguinte que Abriu.</inlineHelpText>
    <label>Reserva recorrente</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Não Recorrente</fullName>
                <default>true</default>
                <label>Não Recorrente</label>
            </value>
            <value>
                <fullName>Semanal</fullName>
            </value>
            <value>
                <fullName>Quinzenal</fullName>
            </value>
            <value>
                <fullName>Mensal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>