force-app/main/default/objects/Reserva_de_Sala__c/fields/Sala__c.field-meta.xml
<CustomField>
    <fullName>Sala__c</fullName>
    <label>Sala</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Auditório</fullName>
            </value>
            <value>
                <fullName>Auditório Oeste</fullName>
            </value>
            <value>
                <fullName>Sala de Reunião</fullName>
            </value>
            <value>
                <fullName>Sala de Reunião 2</fullName>
            </value>
            <value>
                <fullName>Showroom</fullName>
            </value>
            <value>
                <fullName>Showroom &amp; Auditório</fullName>
            </value>
            <value>
                <fullName>Showroom VET</fullName>
            </value>
            <value>
                <fullName>Sala de Reunião 1 - Oeste</fullName>
            </value>
            <value>
                <fullName>Sala de Reunião 2 - Oeste</fullName>
            </value>
            <value>
                <fullName>Sala de Reunião 3 - Oeste</fullName>
            </value>
            <value>
                <fullName>Sala de Vídeo Conferência 1 - Oeste</fullName>
            </value>
            <value>
                <fullName>Sala de Vídeo Conferência 2 - Oeste</fullName>
            </value>
            <value>
                <fullName>Administrativo - Oeste</fullName>
            </value>
            <value>
                <fullName>Sala de Podcast</fullName>
                <isActive>false</isActive>
                <label>Sala de Podcast</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>