force-app/main/default/objects/Reserva_de_Sala__c/fields/Termino__c.field-meta.xml
<CustomField>
    <fullName>Termino__c</fullName>
    <label>Término</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>