force-app/main/default/objects/Reserva_de_Sala__c/recordTypes/HOSPCOM_BRASILIA.recordType-meta.xml
<RecordType>
    <fullName>HOSPCOM_BRASILIA</fullName>
    <active>true</active>
    <label>HOSPCOM - BRASÍLIA</label>
</RecordType>