force-app/main/default/objects/Reserva_de_Sala__c/recordTypes/HOSPCOM_GO_Av_OESTE.recordType-meta.xml
<RecordType>
    <fullName>HOSPCOM_GO_Av_OESTE</fullName>
    <active>true</active>
    <label>HOSPCOM - GO(Av. OESTE)</label>
</RecordType>