force-app/main/default/objects/Reserva_de_Sala__c/recordTypes/HOSPCOM_GO_BR_153.recordType-meta.xml
<RecordType>
    <fullName>HOSPCOM_GO_BR_153</fullName>
    <active>true</active>
    <label>HOSPCOM - GO (BR 153)</label>
</RecordType>