force-app/main/default/objects/Reserva_de_Sala__c/recordTypes/HOSPCOM_GO_RUA_89.recordType-meta.xml
<RecordType>
    <fullName>HOSPCOM_GO_RUA_89</fullName>
    <active>true</active>
    <label>HOSPCOM - GO(RUA 89)</label>
</RecordType>