force-app/main/default/objects/Reserva_de_Sala__c/recordTypes/HOSPCOM_MS.recordType-meta.xml
<RecordType>
    <fullName>HOSPCOM_MS</fullName>
    <active>true</active>
    <label>HOSPCOM - MS</label>
</RecordType>