force-app/main/default/objects/Reserva_de_Sala__c/recordTypes/HOSPCOM_MT.recordType-meta.xml
<RecordType>
    <fullName>HOSPCOM_MT</fullName>
    <active>true</active>
    <label>HOSPCOM - MT</label>
</RecordType>