force-app/main/default/objects/Reserva_de_Sala__c/recordTypes/HOSPCOM_SP_SOROCABA.recordType-meta.xml
<RecordType>
    <fullName>HOSPCOM_SP_SOROCABA</fullName>
    <active>true</active>
    <label>HOSPCOM - SP (SOROCABA)</label>
</RecordType>