force-app/main/default/objects/Reserva_de_Sala__c/recordTypes/HOSPCOM_TO.recordType-meta.xml
<RecordType>
    <fullName>HOSPCOM_TO</fullName>
    <active>true</active>
    <label>HOSPCOM - TO</label>
</RecordType>