force-app/main/default/objects/Reserva_de_Sala__c/validationRules/Datas_invertidas.validationRule-meta.xml
<ValidationRule>
    <fullName>Datas_invertidas</fullName>
    <active>true</active>
    <errorConditionFormula>In_cio__c &gt; Termino__c</errorConditionFormula>
    <errorDisplayField>In_cio__c</errorDisplayField>
    <errorMessage>A data de início não pode ser mair que a data de término.</errorMessage>
</ValidationRule>