force-app/main/default/objects/Reserva_de_Sala__c/validationRules/Novo.validationRule-meta.xml
<ValidationRule>
    <fullName>Novo</fullName>
    <active>false</active>
    <errorConditionFormula>!ISNEW()</errorConditionFormula>
    <errorMessage>Não poderá haver edições após a criação.</errorMessage>
</ValidationRule>