force-app/main/default/objects/Reserva_de_Sala__c/validationRules/recorrencia.validationRule-meta.xml
<ValidationRule>
    <fullName>recorrencia</fullName>
    <active>true</active>
    <errorConditionFormula>Frequencia__c != null &amp;&amp;  recorrencia__c == null ||
 Frequencia__c == null &amp;&amp;  recorrencia__c != null</errorConditionFormula>
    <errorDisplayField>Frequencia__c</errorDisplayField>
    <errorMessage>Caso haja recorrência, deverão ser preenchidos os campos de frequência e recorrência corretamente.</errorMessage>
</ValidationRule>