force-app/main/default/objects/Reserva_de_Sala__c/listViews/C_pia_de_TODOS.listView-meta.xml
<ListView>
    <fullName>C_pia_de_TODOS</fullName>
    <columns>NAME</columns>
    <columns>In_cio__c</columns>
    <columns>Termino__c</columns>
    <columns>Status__c</columns>
    <columns>Sala__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Novo</value>
    </filters>
    <label>Novas reservas</label>
</ListView>