force-app/main/default/objects/Reserva_de_Sala__c/listViews/Em_curso.listView-meta.xml
<ListView>
    <fullName>Em_curso</fullName>
    <columns>NAME</columns>
    <columns>In_cio__c</columns>
    <columns>Termino__c</columns>
    <columns>Status__c</columns>
    <columns>Sala__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Em curso</value>
    </filters>
    <label>Em curso</label>
</ListView>