force-app/main/default/objects/Reserva_de_Sala__c/listViews/Reprovado.listView-meta.xml
<ListView>
    <fullName>Reprovado</fullName>
    <columns>NAME</columns>
    <columns>In_cio__c</columns>
    <columns>Termino__c</columns>
    <columns>Status__c</columns>
    <columns>Sala__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Reprovado</value>
    </filters>
    <label>Reprovado</label>
</ListView>