force-app/main/default/objects/Reserva_de_Sala__c/listViews/TODOS.listView-meta.xml
<ListView>
    <fullName>TODOS</fullName>
    <columns>NAME</columns>
    <columns>In_cio__c</columns>
    <columns>Termino__c</columns>
    <columns>Status__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>Sala__c</columns>
    <columns>OWNER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <label>TODOS</label>
</ListView>